--- a/templates/directory_index.html
+++ b/templates/directory_index.html
@@ -125,6 +125,17 @@
     </div>
 
     <div class="collapse navbar-collapse pull-right" id="actions">
+
+        <span style="display: inline-block; vertical-align: middle; float: none;">
+            <form action="" method="post" class="new-folder form-inline">
+                <span class="form-group">
+                <label for="dirname_input">New Folder Name:</label>
+                <input type="text" class="form-control" name="dirname" id="dirname_input" placeholder="directory name">
+                <button type="submit" class="btn btn-danger navbar-btn">Create</button>
+                </span>
+            </form>
+        </span>
+
         <span data-toggle="tooltip" title="New Directory" data-placement="bottom">
         <button type="button" class="btn btn-default new-folder-btn navbar-btn">
             <i class="glyphicon glyphicon-folder-open"></i>
@@ -162,11 +173,6 @@
 {% endif %}
 
             
-<div class="new-folder">
-A form for the new folder.
-
-</div>
-
 <!-- Drag'n drop indication -->
 <div class="text-center" style="margin: 20px 0 0 0;">
     Add files by dropping them here.
